--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,6 +35,16 @@ RATE_LIMIT_ENABLED=true
 RATE_LIMIT_PER_MINUTE=60
 RATE_LIMIT_PER_HOUR=1000
 
+# CSRF Protection (recommended for production with web UI)
+ENABLE_CSRF_PROTECTION=false
+
+# HTTPS Redirect (enable when behind reverse proxy with SSL)
+FORCE_HTTPS=false
+
+# Download Expiration (auto-cleanup old files)
+DOWNLOAD_EXPIRY_DAYS=7
+ENABLE_AUTO_CLEANUP=false
+
 # Request Size Limits (prevent memory exhaustion)
 MAX_REQUEST_SIZE=10485760  # 10 MB in bytes
 
@@ -73,11 +83,14 @@ LOG_FORMAT="%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 # 3. Enable API key authentication (ENABLE_API_KEY_AUTH=true)
 # 4. Generate and set a secure API_KEY
 # 5. Configure HTTPS/TLS (use a reverse proxy like nginx)
-# 6. Update CORS_ORIGINS to your actual frontend domain (HTTPS only!)
-# 7. Switch to PostgreSQL for DATABASE_URL
-# 8. Review and adjust rate limits based on your needs
-# 9. Adjust disk space limits based on available storage
-# 10. Set up log aggregation and monitoring
-# 11. Regularly update dependencies for security patches
+# 6. Set FORCE_HTTPS=true to redirect HTTP to HTTPS
+# 7. Enable CSRF protection (ENABLE_CSRF_PROTECTION=true)
+# 8. Update CORS_ORIGINS to your actual frontend domain (HTTPS only!)
+# 9. Switch to PostgreSQL for DATABASE_URL
+# 10. Review and adjust rate limits based on your needs
+# 11. Adjust disk space limits based on available storage
+# 12. Enable ENABLE_AUTO_CLEANUP=true for automatic file cleanup
+# 13. Set up log aggregation and monitoring
+# 14. Regularly update dependencies for security patches
 #
 # ============================================================================
